@@ -1,10 +1,10 @@
 This file contains any messages produced by compilers while
 running configure, to aid debugging if configure makes a mistake.
 
-It was created by gcmtool configure 0.2.4d, which was
+It was created by gcmtool configure 0.2.4, which was
 generated by GNU Autoconf 2.57.  Invocation command line was
 
-  $ ./configure --target=i386 target_alias=i386 --no-create --no-recursion
+  $ ./configure 
 
 ## --------- ##
 ## Platform. ##
@@ -32,8 +32,8 @@ Kernel configured for a single processor only.
 Processor type: ppc7450 (PowerPC 7450)
 Processor active: 0
 Primary memory available: 1280.00 megabytes.
-Default processor set: 80 tasks, 201 threads, 1 processors
-Load average: 2.04, Mach factor: 0.23
+Default processor set: 78 tasks, 213 threads, 1 processors
+Load average: 1.63, Mach factor: 0.30
 unknown
 /bin/machine           = unknown
 /usr/bin/oslevel       = unknown
@@ -137,6 +137,26 @@ configure:2636: checking for a BSD-compatible install
 configure:2690: result: /usr/bin/install -c
 configure:2811: creating ./config.status
 
+## ---------------------- ##
+## Running config.status. ##
+## ---------------------- ##
+
+This file was extended by gcmtool config.status 0.2.4, which was
+generated by GNU Autoconf 2.57.  Invocation command line was
+
+  CONFIG_FILES    = 
+  CONFIG_HEADERS  = 
+  CONFIG_LINKS    = 
+  CONFIG_COMMANDS = 
+  $ ./config.status 
+
+on Mookid.local
+
+config.status:647: creating Makefile
+config.status:647: creating src/Makefile
+config.status:751: creating src/config.h
+config.status:942: executing depfiles commands
+
 ## ---------------- ##
 ## Cache variables. ##
 ## ---------------- ##
@@ -154,8 +174,8 @@ ac_cv_env_build_alias_set=
 ac_cv_env_build_alias_value=
 ac_cv_env_host_alias_set=
 ac_cv_env_host_alias_value=
-ac_cv_env_target_alias_set=set
-ac_cv_env_target_alias_value=i386
+ac_cv_env_target_alias_set=
+ac_cv_env_target_alias_value=
 ac_cv_exeext=
 ac_cv_objext=o
 ac_cv_path_install='/usr/bin/install -c'
@@ -202,14 +222,14 @@ OBJEXT='o'
 PACKAGE='gcmtool'
 PACKAGE_BUGREPORT=''
 PACKAGE_NAME='gcmtool'
-PACKAGE_STRING='gcmtool 0.2.4d'
+PACKAGE_STRING='gcmtool 0.2.4'
 PACKAGE_TARNAME='gcmtool'
-PACKAGE_VERSION='0.2.4d'
+PACKAGE_VERSION='0.2.4'
 PATH_SEPARATOR=':'
 SET_MAKE=''
 SHELL='/bin/sh'
 STRIP=''
-VERSION='0.2.4d'
+VERSION='0.2.4'
 ac_ct_CC='gcc'
 ac_ct_STRIP=''
 am__include='include'
@@ -232,7 +252,7 @@ program_transform_name='s,x,x,'
 sbindir='${exec_prefix}/sbin'
 sharedstatedir='${prefix}/com'
 sysconfdir='${prefix}/etc'
-target_alias='i386'
+target_alias=''
 
 ## ----------- ##
 ## confdefs.h. ##
@@ -241,44 +261,9 @@ target_alias='i386'
 #define PACKAGE "gcmtool"
 #define PACKAGE_BUGREPORT ""
 #define PACKAGE_NAME "gcmtool"
-#define PACKAGE_STRING "gcmtool 0.2.4d"
+#define PACKAGE_STRING "gcmtool 0.2.4"
 #define PACKAGE_TARNAME "gcmtool"
-#define PACKAGE_VERSION "0.2.4d"
-#define VERSION "0.2.4d"
+#define PACKAGE_VERSION "0.2.4"
+#define VERSION "0.2.4"
 
 configure: exit 0
-
-## ---------------------- ##
-## Running config.status. ##
-## ---------------------- ##
-
-This file was extended by gcmtool config.status 0.2.4d, which was
-generated by GNU Autoconf 2.57.  Invocation command line was
-
-  CONFIG_FILES    = 
-  CONFIG_HEADERS  = 
-  CONFIG_LINKS    = 
-  CONFIG_COMMANDS = 
-  $ ./config.status Makefile
-
-on Mookid.local
-
-config.status:647: creating Makefile
-
-## ---------------------- ##
-## Running config.status. ##
-## ---------------------- ##
-
-This file was extended by gcmtool config.status 0.2.4d, which was
-generated by GNU Autoconf 2.57.  Invocation command line was
-
-  CONFIG_FILES    = 
-  CONFIG_HEADERS  = 
-  CONFIG_LINKS    = 
-  CONFIG_COMMANDS = 
-  $ ./config.status src/Makefile depfiles
-
-on Mookid.local
-
-config.status:647: creating src/Makefile
-config.status:942: executing depfiles commands
