@@ -257,7 +257,7 @@ _ASBOX
 } >&5
 cat >&5 <<_CSEOF
 
-This file was extended by gcmtool $as_me 0.2.4d, which was
+This file was extended by gcmtool $as_me 0.2.4, which was
 generated by GNU Autoconf 2.57.  Invocation command line was
 
   CONFIG_FILES    = $CONFIG_FILES
@@ -300,9 +300,9 @@ $config_commands
 
 Report bugs to <bug-autoconf@gnu.org>."
 ac_cs_version="\
-gcmtool config.status 0.2.4d
+gcmtool config.status 0.2.4
 configured by ./configure, generated by GNU Autoconf 2.57,
-  with options \"'--target=i386' 'target_alias=i386'\"
+  with options \"\"
 
 Copyright 1992, 1993, 1994, 1995, 1996, 1998, 1999, 2000, 2001
 Free Software Foundation, Inc.
@@ -382,8 +382,8 @@ if $ac_cs_silent; then
 fi
 
 if $ac_cs_recheck; then
-  echo "running /bin/sh ./configure " '--target=i386' 'target_alias=i386' $ac_configure_extra_args " --no-create --no-recursion" >&6
-  exec /bin/sh ./configure '--target=i386' 'target_alias=i386' $ac_configure_extra_args --no-create --no-recursion
+  echo "running /bin/sh ./configure "  $ac_configure_extra_args " --no-create --no-recursion" >&6
+  exec /bin/sh ./configure  $ac_configure_extra_args --no-create --no-recursion
 fi
 
 #
@@ -456,8 +456,8 @@ s,@SHELL@,/bin/sh,;t t
 s,@PATH_SEPARATOR@,:,;t t
 s,@PACKAGE_NAME@,gcmtool,;t t
 s,@PACKAGE_TARNAME@,gcmtool,;t t
-s,@PACKAGE_VERSION@,0.2.4d,;t t
-s,@PACKAGE_STRING@,gcmtool 0.2.4d,;t t
+s,@PACKAGE_VERSION@,0.2.4,;t t
+s,@PACKAGE_STRING@,gcmtool 0.2.4,;t t
 s,@PACKAGE_BUGREPORT@,,;t t
 s,@exec_prefix@,${prefix},;t t
 s,@prefix@,/usr/local,;t t
@@ -476,7 +476,7 @@ s,@infodir@,${prefix}/info,;t t
 s,@mandir@,${prefix}/man,;t t
 s,@build_alias@,,;t t
 s,@host_alias@,,;t t
-s,@target_alias@,i386,;t t
+s,@target_alias@,,;t t
 s,@DEFS@,-DHAVE_CONFIG_H,;t t
 s,@ECHO_C@,,;t t
 s,@ECHO_N@,-n,;t t
@@ -486,7 +486,7 @@ s,@INSTALL_PROGRAM@,${INSTALL},;t t
 s,@INSTALL_SCRIPT@,${INSTALL},;t t
 s,@INSTALL_DATA@,${INSTALL} -m 644,;t t
 s,@PACKAGE@,gcmtool,;t t
-s,@VERSION@,0.2.4d,;t t
+s,@VERSION@,0.2.4,;t t
 s,@ACLOCAL@,${SHELL} /Users/spike/gcmtool/cvs/gcmtool/missing --run aclocal-1.6,;t t
 s,@AUTOCONF@,${SHELL} /Users/spike/gcmtool/cvs/gcmtool/missing --run autoconf,;t t
 s,@AUTOMAKE@,${SHELL} /Users/spike/gcmtool/cvs/gcmtool/missing --run automake-1.6,;t t
@@ -791,11 +791,11 @@ t clr
 : clr
 ${ac_dA}PACKAGE_NAME${ac_dB}PACKAGE_NAME${ac_dC}"gcmtool"${ac_dD}
 ${ac_dA}PACKAGE_TARNAME${ac_dB}PACKAGE_TARNAME${ac_dC}"gcmtool"${ac_dD}
-${ac_dA}PACKAGE_VERSION${ac_dB}PACKAGE_VERSION${ac_dC}"0.2.4d"${ac_dD}
-${ac_dA}PACKAGE_STRING${ac_dB}PACKAGE_STRING${ac_dC}"gcmtool 0.2.4d"${ac_dD}
+${ac_dA}PACKAGE_VERSION${ac_dB}PACKAGE_VERSION${ac_dC}"0.2.4"${ac_dD}
+${ac_dA}PACKAGE_STRING${ac_dB}PACKAGE_STRING${ac_dC}"gcmtool 0.2.4"${ac_dD}
 ${ac_dA}PACKAGE_BUGREPORT${ac_dB}PACKAGE_BUGREPORT${ac_dC}""${ac_dD}
 ${ac_dA}PACKAGE${ac_dB}PACKAGE${ac_dC}"gcmtool"${ac_dD}
-${ac_dA}VERSION${ac_dB}VERSION${ac_dC}"0.2.4d"${ac_dD}
+${ac_dA}VERSION${ac_dB}VERSION${ac_dC}"0.2.4"${ac_dD}
 CEOF
   sed -f $tmp/defines.sed $tmp/in >$tmp/out
   rm -f $tmp/in
@@ -810,11 +810,11 @@ t clr
 : clr
 ${ac_uA}PACKAGE_NAME${ac_uB}PACKAGE_NAME${ac_uC}"gcmtool"${ac_uD}
 ${ac_uA}PACKAGE_TARNAME${ac_uB}PACKAGE_TARNAME${ac_uC}"gcmtool"${ac_uD}
-${ac_uA}PACKAGE_VERSION${ac_uB}PACKAGE_VERSION${ac_uC}"0.2.4d"${ac_uD}
-${ac_uA}PACKAGE_STRING${ac_uB}PACKAGE_STRING${ac_uC}"gcmtool 0.2.4d"${ac_uD}
+${ac_uA}PACKAGE_VERSION${ac_uB}PACKAGE_VERSION${ac_uC}"0.2.4"${ac_uD}
+${ac_uA}PACKAGE_STRING${ac_uB}PACKAGE_STRING${ac_uC}"gcmtool 0.2.4"${ac_uD}
 ${ac_uA}PACKAGE_BUGREPORT${ac_uB}PACKAGE_BUGREPORT${ac_uC}""${ac_uD}
 ${ac_uA}PACKAGE${ac_uB}PACKAGE${ac_uC}"gcmtool"${ac_uD}
-${ac_uA}VERSION${ac_uB}VERSION${ac_uC}"0.2.4d"${ac_uD}
+${ac_uA}VERSION${ac_uB}VERSION${ac_uC}"0.2.4"${ac_uD}
 s,^[ 	]*#[ 	]*undef[ 	][ 	]*[a-zA-Z_][a-zA-Z_0-9]*,/* & */,
 CEOF
   sed -f $tmp/undefs.sed $tmp/in >$tmp/out
